tests/ui/parser/removed-syntax/removed-syntax-uniq-mut-expr.stderr
error: expected expression, found keyword `mut`
  --> $DIR/removed-syntax-uniq-mut-expr.rs:2:21
   |
LL |     let a_box = box mut 42;
   |                     ^^^ expected expression

error: aborting due to 1 previous error

