tests/ui/parser/removed-syntax/removed-syntax-uniq-mut-expr.rs
fn main() {
    let a_box = box mut 42; //~ ERROR expected expression, found keyword `mut`
}
